bookmarks.html + readme.md

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -44,6 +44,29 @@
     				<li><a href="https://developer.mozilla.org/en-US/docs/MDN/Guidelines/Code_guidelines/HTML" target="_blank">HTML guidelines</a></li>
     				<li><a href="https://www.w3schools.com/html/html5_syntax.asp" target="_blank">HTML Style Guide</a></li>
     			</ul>
+    			<p>CSS Reference</p>
+    			<ul>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/MDN/Guidelines/Code_guidelines/CSS" target="_blank">CSS guidelines</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Organizing" target="_blank">Organizing your CSS</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes" target="_blank">Pseudo-classes</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Box_Model/Introduction_to_the_CSS_box_model" target="_blank">Introduction to the CSS basic box model</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/The_box_model" target="_blank">The box model</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Document_and_website_structure" target="_blank">Document and website structure</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox" target="_blank">Flexbox</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox" target="_blank">Basic concepts of flexbox</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Grids" target="_blank">Grids</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Responsive_Design" target="_blank">Responsive design</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Values_and_units" target="_blank">CSS values and units</a></li>
+    				<li><a href="https://css-tricks.com/pseudo-class-selectors/" target="_blank">Meet the Pseudo Class Selectors</a></li>
+    				<li><a href="https://bitsofco.de/when-do-the-hover-focus-and-active-pseudo-classes-apply/" target="_blank">When do the :hover, :focus, and :active pseudo-classes apply?</a></li>
+    				<li><a href="https://web.dev/responsive-web-design-basics/" target="_blank">Responsive web design basics</a></li>
+    			</ul>
+    			<p>JavaScript Reference</p>
+    			<ul>
+    				<li>Link 1</li>
+    				<li>Link 2</li>
+    				<li>Link 3</li>
+    			</ul>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
 			<footer>
