bookmarks.html + readme.md

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -63,10 +63,26 @@
     			</ul>
     			<p>JavaScript Reference</p>
     			<ul>
-    				<li>Link 1</li>
-    				<li>Link 2</li>
-    				<li>Link 3</li>
-    			</ul>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/MDN/Guidelines/Code_guidelines/JavaScript" target="_blank">JavaScript guidelines</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators" target="_blank">Expressions and operators</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools" target="_blank">What are browser developer tools?</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/Events" target="_blank">Event reference</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/API" target="_blank">Web APIs</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction" target="_blank">Introduction to the DOM</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_object_model/Locating_DOM_elements_using_selectors" target="_blank">Locating DOM elements using selectors</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener" target="_blank">EventTarget.addEventListener()</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/removeEventListener" target="_blank">EventTarget.removeEventListener()</a></li>
+    				<li><a href="https://www.w3schools.com/js/js_conventions.asp" target="_blank">JavaScript Style Guide</a></li>
+    				<li><a href="https://www.freecodecamp.org/news/whats-the-document-object-model-and-why-you-should-know-how-to-use-it-1a2d0bc5429d/" target="_blank">What’s the Document Object Model, and why you should know how to use it.</a></li>
+    				<li><a href="https://flaviocopes.com/javascript-events/" target="_blank">JavaScript Events Explained</a></li>
+    				<li><a href="https://jsdoc.app/about-getting-started.html" target="_blank">Getting Started with JSDoc 3</a></li>
+    				<li><a href="https://dev.to/paulasantamaria/document-your-javascript-code-with-jsdoc-2fbf" target="_blank">Document your Javascript code with JSDoc</a></li>
+    				<li><a href="https://contribute.jquery.org/style-guide/js/" target="_blank">JavaScript Style Guide</a></li>
+    				<li><a href="https://google.github.io/styleguide/jsguide.html" target="_blank">Google JavaScript Style Guide</a></li>
+    				<li><a href="https://flaviocopes.com/javascript-debugging/" target="_blank">The definitive guide to debugging JavaScript</a></li>
+    				<li><a href="https://javascript.info/debugging-chrome" target="_blank">Debugging in the browser</a></li>
+    			</ul><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
 			<footer>
