index.html + readme.md

--- a/index.html
+++ b/index.html
@@ -341,6 +341,11 @@
 					<td>Snowpack</td>
 					<td>Linters and formatters</td>
 				</tr>
+				<tr>
+					<td>Prettier</td>
+					<td>ESLint</td>
+					<td>Task Runners</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
