--- a/index.html
+++ b/index.html
@@ -346,6 +346,20 @@
 					<td>ESLint</td>
 					<td>Task Runners</td>
 				</tr>
+				<tr>
+					<td>NPM Scripts</td>
+					<td>Transpilers</td>
+					<td>Babel</td>
+				</tr>
+				<tr>
+					<td>Typescript</td>
+					<td>CSS Pre-processors</td>
+					<td>SASS</td>
+				</tr>
+				<tr>
+					<td>PostCSS</td>
+					<td>Node.js</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
