index.html + bookmarks.html

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Build Tools</strong></li>
-						<li>Frameworks & Libraries</li>
+						<li><strong>Frameworks & Libraries</strong></li>
 						<li>Testing</li>
 						<li>Architecture & Paradigms</li>
 						<li>Team collaboration</li>
@@ -46,7 +45,7 @@
     				</tr>
     				<tr>
     					<td>Progressive WebApps <span class="completed">Completed</span></td>
-    					<td>Build Tools</td>
+    					<td>Build Tools <span class="completed">Completed</span></td>
     					<td>Frameworks & Libraries</td>
     				</tr>
     				<tr>
