--- a/bookmarks.html
+++ b/bookmarks.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Build Tools</strong></li>
-						<li>Frameworks & Libraries</li>
+						<li><strong>Frameworks & Libraries</strong></li>
 						<li>Testing</li>
 						<li>Architecture & Paradigms</li>
 						<li>Team collaboration</li>
