readme.md + bookmarks.html

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -81,6 +81,19 @@
     				<li><a href="https://google.github.io/styleguide/jsguide.html" target="_blank">Google JavaScript Style Guide</a></li>
     				<li><a href="https://flaviocopes.com/javascript-debugging/" target="_blank">The definitive guide to debugging JavaScript</a></li>
     				<li><a href="https://javascript.info/debugging-chrome" target="_blank">Debugging in the browser</a></li>
+    			</ul>
+    			<p>The Browser</p>
+    			<ul>
+    				<li><a href="https://en.wikipedia.org/wiki/Web_standards" target="_blank">Web standards</a></li>
+    				<li><a href="https://en.wikipedia.org/wiki/Ecma_International" target="_blank">Ecma International</a></li>
+    				<li><a href="https://en.wikipedia.org/wiki/WHATWG" target="_blank">WHATWG</a></li>
+    				<li><a href="https://html.spec.whatwg.org/" target="_blank">HTML Standard</a></li>
+    				<li><a href="https://spec.whatwg.org/" target="_blank">WHATWG Standards</a></li>
+    				<li><a href="https://timothygu.me/es-howto/" target="_blank">How to Read the ECMAScript Specification</a></li>
+    				<li><a href="https://www.w3.org/Style/CSS/" target="_blank">Cascading Style Sheets home page</a></li>
+    				<li><a href="https://www.w3.org/Style/CSS/read.en.html" target="_blank">Understanding the CSS Specifications</a></li>
+    				<li><a href="https://en.wikipedia.org/wiki/Comparison_of_browser_engines" target="_blank">Comparison of browser engines</a></li>
+    				<li><a href="https://www.html5rocks.com/en/tutorials/internals/howbrowserswork/" target="_blank">How Browsers Work: Behind the scenes of modern web browsers</a></li>
     			</ul><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
