--- a/index.html
+++ b/index.html
@@ -359,6 +359,14 @@
 					<td>PostCSS</td>
 					<td>Node.js</td>
 				</tr>
+			</table><br>
+			<h1>Frameworks & Libraries</h1>
+			<table>
+				<tr>
+					<td>lit-element</td>
+					<td>Vue</td>
+					<td>React</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
