index.html + bookmarks.html + readme.md

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Frameworks & Libraries</strong></li>
-						<li>Testing</li>
+						<li><strong>Testing</strong></li>
 						<li>Architecture & Paradigms</li>
 						<li>Team collaboration</li>
 						<li>Design & UX</li>
@@ -46,7 +45,7 @@
     				<tr>
     					<td>Progressive WebApps <span class="completed">Completed</span></td>
     					<td>Build Tools <span class="completed">Completed</span></td>
-    					<td>Frameworks & Libraries</td>
+    					<td>Frameworks & Libraries <span class="completed">Completed</span></td>
     				</tr>
     				<tr>
     					<td>Testing</td>
@@ -366,6 +365,11 @@
 					<td>lit-element</td>
 					<td>Vue</td>
 					<td>React</td>
+				</tr>
+				<tr>
+					<td>Angular</td>
+					<td>Svelte</td>
+					<td>Stencil</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
