--- a/index.html
+++ b/index.html
@@ -371,6 +371,14 @@
 					<td>Svelte</td>
 					<td>Stencil</td>
 				</tr>
+			</table><br>
+			<h1>Testing</h1>
+			<table>
+				<tr>
+					<td>Testing Methodologies</td>
+					<td>Unit Testing</td>
+					<td>Integration Testing</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
