--- a/index.html
+++ b/index.html
@@ -379,6 +379,11 @@
 					<td>Unit Testing</td>
 					<td>Integration Testing</td>
 				</tr>
+				<tr>
+					<td>System Testing</td>
+					<td>Acceptance Testing</td>
+					<td>Smoke Testing</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
