--- a/index.html
+++ b/index.html
@@ -384,6 +384,11 @@
 					<td>Acceptance Testing</td>
 					<td>Smoke Testing</td>
 				</tr>
+				<tr>
+					<td>Performance Testing</td>
+					<td>Usability Testing</td>
+					<td>White Box Testing</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
