--- a/index.html
+++ b/index.html
@@ -389,6 +389,11 @@
 					<td>Usability Testing</td>
 					<td>White Box Testing</td>
 				</tr>
+				<tr>
+					<td>Black Box Testing</td>
+					<td>Automated Testing</td>
+					<td>Manual Testing</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
