--- a/index.html
+++ b/index.html
@@ -394,6 +394,11 @@
 					<td>Automated Testing</td>
 					<td>Manual Testing</td>
 				</tr>
+				<tr>
+					<td>Continuous integration</td>
+					<td>A/B Testing</td>
+					<td>Test Runners</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
