--- a/index.html
+++ b/index.html
@@ -399,6 +399,11 @@
 					<td>A/B Testing</td>
 					<td>Test Runners</td>
 				</tr>
+				<tr>
+					<td>Karma</td>
+					<td>Mocha</td>
+					<td>Jasmine</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
