index.html + bookmarks.html

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Testing</strong></li>
-						<li>Architecture & Paradigms</li>
+						<li><strong>Architecture & Paradigms</strong></li>
 						<li>Team collaboration</li>
 						<li>Design & UX</li>
 						<li>The modern Web</li>
