--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Testing</strong></li>
-						<li>Architecture & Paradigms</li>
+						<li><strong>Architecture & Paradigms</strong></li>
 						<li>Team collaboration</li>
 						<li>Design & UX</li>
 						<li>The modern Web</li>
@@ -48,7 +47,7 @@
     					<td>Frameworks & Libraries <span class="completed">Completed</span></td>
     				</tr>
     				<tr>
-    					<td>Testing</td>
+    					<td>Testing <span class="completed">Completed</span></td>
     					<td>Architecture & Paradigms</td>
     					<td>Team collaboration</td>
     				</tr>
@@ -403,6 +402,11 @@
 					<td>Karma</td>
 					<td>Mocha</td>
 					<td>Jasmine</td>
+				</tr>
+				<tr>
+					<td>Cypress</td>
+					<td>Ava</td>
+					<td>Best Practices</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
