--- a/index.html
+++ b/index.html
@@ -408,6 +408,15 @@
 					<td>Ava</td>
 					<td>Best Practices</td>
 				</tr>
+			</table><br>
+			<h1>Architecture & Paradigms</h1>
+			<h3>Paradigms</h3>
+			<table>
+				<tr>
+					<td>Programming Paradigms</td>
+					<td>Object Oriented Programming</td>
+					<td>S.O.L.I.D</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
