--- a/index.html
+++ b/index.html
@@ -417,6 +417,11 @@
 					<td>Object Oriented Programming</td>
 					<td>S.O.L.I.D</td>
 				</tr>
+				<tr>
+					<td>Functional programming</td>
+					<td>Recursion</td>
+					<td>Higher-Order Functions</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
