--- a/index.html
+++ b/index.html
@@ -422,6 +422,18 @@
 					<td>Recursion</td>
 					<td>Higher-Order Functions</td>
 				</tr>
+				<tr>
+					<td>Currying</td>
+					<td>Monads</td>
+				</tr>
+			</table>
+			<h3>Architecture</h3>
+			<table>
+				<tr>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
