--- a/index.html
+++ b/index.html
@@ -430,9 +430,9 @@
 			<h3>Architecture</h3>
 			<table>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>Design Patterns</td>
+					<td>Singleton</td>
+					<td>Observer</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
