--- a/index.html
+++ b/index.html
@@ -434,6 +434,11 @@
 					<td>Singleton</td>
 					<td>Observer</td>
 				</tr>
+				<tr>
+					<td>Prototype</td>
+					<td>Bridge</td>
+					<td>Proxy</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
