--- a/index.html
+++ b/index.html
@@ -439,6 +439,11 @@
 					<td>Bridge</td>
 					<td>Proxy</td>
 				</tr>
+				<tr>
+					<td>Chain of responsibility</td>
+					<td>Constructor</td>
+					<td>CSS Methodologies</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
