--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Architecture & Paradigms</strong></li>
-						<li>Team collaboration</li>
+						<li><strong>Team collaboration</strong></li>
 						<li>Design & UX</li>
 						<li>The modern Web</li>
 						<li>Algorithms & Data Structures</li>
@@ -48,7 +47,7 @@
     				</tr>
     				<tr>
     					<td>Testing <span class="completed">Completed</span></td>
-    					<td>Architecture & Paradigms</td>
+    					<td>Architecture & Paradigms <span class="completed">Completed</span></td>
     					<td>Team collaboration</td>
     				</tr>
     				<tr>
@@ -443,6 +442,11 @@
 					<td>Chain of responsibility</td>
 					<td>Constructor</td>
 					<td>CSS Methodologies</td>
+				</tr>
+				<tr>
+					<td>BEM</td>
+					<td>SMACSS</td>
+					<td>OOCSS</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
