--- a/index.html
+++ b/index.html
@@ -448,7 +448,16 @@
 					<td>SMACSS</td>
 					<td>OOCSS</td>
 				</tr>
-			</table><br><br>
+			</table><br>
+			<h1>Team Collaboration</h1>
+			<h3>Version Control</h3>
+			<table>
+				<tr>
+					<td>Git</td>
+					<td>GitHub</td>
+					<td>Bitbucket</td>
+				</tr>
+			</table><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
 			<footer>
