index.html + bookmarks.html

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -91,6 +91,20 @@
     				<li><a href="https://www.w3.org/Style/CSS/read.en.html" target="_blank">Understanding the CSS Specifications</a></li>
     				<li><a href="https://en.wikipedia.org/wiki/Comparison_of_browser_engines" target="_blank">Comparison of browser engines</a></li>
     				<li><a href="https://www.html5rocks.com/en/tutorials/internals/howbrowserswork/" target="_blank">How Browsers Work: Behind the scenes of modern web browsers</a></li>
+    			</ul>
+    			<p>Git</p>
+    			<ul>
+    				<li><a href="https://learngitbranching.js.org/?locale=pt_BR" target="_blank">Learn Git Branching</a></li>
+    				<li><a href="https://docs.github.com/en/get-started/using-git/about-git" target="_blank">Get Started with Git</a></li>
+    				<li><a href="https://training.github.com/downloads/github-git-cheat-sheet/" target="_blank">Git Cheatsheet</a></li>
+    				<li><a href="http://git-school.github.io/visualizing-git/" target="_blank">Visualizing Git</a></li>
+    				<li><a href="https://git-hint.netlify.app/" target="_blank">Git Hint</a></li>
+    			</ul>
+    			<p>GitHub</p>
+    			<ul>
+    				<li><a href="https://docs.github.com/en/get-started/quickstart/hello-world" target="_blank">Hello World</a></li>
+    				<li><a href="https://lab.github.com/" target="_blank">GitHub Learning Lab</a></li>
+    				<li><a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">GitHub (Wikipedia)</a></li>
     			</ul><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
