--- a/index.html
+++ b/index.html
@@ -457,7 +457,19 @@
 					<td>GitHub</td>
 					<td>Bitbucket</td>
 				</tr>
-			</table><br>
+			</table>
+			<h3>Management</h3>
+			<table>
+				<tr>
+					<td>Agile Development</td>
+					<td>Scrum</td>
+					<td>Kanban</td>
+				</tr>
+				<tr>
+					<td>Waterfall Development</td>
+					<td>Test Driven Development</td>
+				</tr>
+			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
 			<footer>
