index.html + bookmarks.html

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Team collaboration</strong></li>
-						<li>Design & UX</li>
+						<li><strong>Design & UX</strong></li>
 						<li>The modern Web</li>
 						<li>Algorithms & Data Structures</li>
 						<li>Databases & Servers</li>
