--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Team collaboration</strong></li>
-						<li>Design & UX</li>
+						<li><strong>Design & UX</strong></li>
 						<li>The modern Web</li>
 						<li>Algorithms & Data Structures</li>
 						<li>Databases & Servers</li>
@@ -48,7 +47,7 @@
     				<tr>
     					<td>Testing <span class="completed">Completed</span></td>
     					<td>Architecture & Paradigms <span class="completed">Completed</span></td>
-    					<td>Team collaboration</td>
+    					<td>Team collaboration <span class="completed">Completed</span></td>
     				</tr>
     				<tr>
     					<td>Design & UX</td>
