--- a/index.html
+++ b/index.html
@@ -468,6 +468,14 @@
 					<td>Waterfall Development</td>
 					<td>Test Driven Development</td>
 				</tr>
+			</table><br>
+			<h1>Design & UX</h1>
+			<table>
+				<tr>
+					<td>Color Theory</td>
+					<td>Color Wheel</td>
+					<td>Typography</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
