--- a/index.html
+++ b/index.html
@@ -476,6 +476,11 @@
 					<td>Color Wheel</td>
 					<td>Typography</td>
 				</tr>
+				<tr>
+					<td>Font Size</td>
+					<td>Line Spacing</td>
+					<td>C.R.A.P</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
