--- a/index.html
+++ b/index.html
@@ -481,6 +481,11 @@
 					<td>Line Spacing</td>
 					<td>C.R.A.P</td>
 				</tr>
+				<tr>
+					<td>Contrast</td>
+					<td>Repetition</td>
+					<td>Alignment</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
