--- a/index.html
+++ b/index.html
@@ -486,6 +486,11 @@
 					<td>Repetition</td>
 					<td>Alignment</td>
 				</tr>
+				<tr>
+					<td>Proximity</td>
+					<td>Consistency</td>
+					<td>Spacing</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
