--- a/index.html
+++ b/index.html
@@ -491,6 +491,11 @@
 					<td>Consistency</td>
 					<td>Spacing</td>
 				</tr>
+				<tr>
+					<td>Error Handling</td>
+					<td>Loading</td>
+					<td>The Golden Ratio</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
