--- a/index.html
+++ b/index.html
@@ -496,6 +496,11 @@
 					<td>Loading</td>
 					<td>The Golden Ratio</td>
 				</tr>
+				<tr>
+					<td>Mobile First</td>
+					<td>Hit Targets</td>
+					<td>Design Systems</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
