--- a/index.html
+++ b/index.html
@@ -501,6 +501,11 @@
 					<td>Hit Targets</td>
 					<td>Design Systems</td>
 				</tr>
+				<tr>
+					<td>Material Design</td>
+					<td>Fluent Design</td>
+					<td>Accessibility</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
