--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Design & UX</strong></li>
-						<li>The modern Web</li>
+						<li><strong>The modern Web</strong></li>
 						<li>Algorithms & Data Structures</li>
 						<li>Databases & Servers</li>
 					</ul>
@@ -50,7 +49,7 @@
     					<td>Team collaboration <span class="completed">Completed</span></td>
     				</tr>
     				<tr>
-    					<td>Design & UX</td>
+    					<td>Design & UX <span class="completed">Completed</span></td>
     					<td>The modern Web</td>
     					<td>Algorithms & Data Structures</td>
     				</tr>
@@ -505,6 +504,9 @@
 					<td>Material Design</td>
 					<td>Fluent Design</td>
 					<td>Accessibility</td>
+				</tr>
+				<tr>
+					<td>Best Practices</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
