--- a/index.html
+++ b/index.html
@@ -508,6 +508,14 @@
 				<tr>
 					<td>Best Practices</td>
 				</tr>
+			</table><br>
+			<h1>The modern Web</h1>
+			<table>
+				<tr>
+					<td>Streams</td>
+					<td>Media Streams</td>
+					<td>Media Recorder</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
