--- a/index.html
+++ b/index.html
@@ -516,6 +516,11 @@
 					<td>Media Streams</td>
 					<td>Media Recorder</td>
 				</tr>
+				<tr>
+					<td>Web RTC</td>
+					<td>Screen Capture</td>
+					<td>Generators</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
