--- a/index.html
+++ b/index.html
@@ -517,9 +517,14 @@
 					<td>Media Recorder</td>
 				</tr>
 				<tr>
-					<td>Web RTC</td>
+					<td>WebRTC</td>
 					<td>Screen Capture</td>
 					<td>Generators</td>
+				</tr>
+				<tr>
+					<td>Speech Synthesis</td>
+					<td>Web Sockets</td>
+					<td>Geolocation</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
