--- a/index.html
+++ b/index.html
@@ -526,6 +526,11 @@
 					<td>Web Sockets</td>
 					<td>Geolocation</td>
 				</tr>
+				<tr>
+					<td>Device orientation & motion</td>
+					<td>Fullscreen</td>
+					<td>Variable Fonts</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
