--- a/index.html
+++ b/index.html
@@ -531,6 +531,11 @@
 					<td>Fullscreen</td>
 					<td>Variable Fonts</td>
 				</tr>
+				<tr>
+					<td>HTTP/2</td>
+					<td>Payment Request API</td>
+					<td>Web Audio</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
