--- a/index.html
+++ b/index.html
@@ -536,6 +536,11 @@
 					<td>Payment Request API</td>
 					<td>Web Audio</td>
 				</tr>
+				<tr>
+					<td>Observers</td>
+					<td>Mutation Observer</td>
+					<td>Intersection Observer</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
