--- a/index.html
+++ b/index.html
@@ -541,6 +541,11 @@
 					<td>Mutation Observer</td>
 					<td>Intersection Observer</td>
 				</tr>
+				<tr>
+					<td>Resize Observer</td>
+					<td>Performance Observer</td>
+					<td>Scrollsnapping</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
