--- a/index.html
+++ b/index.html
@@ -546,6 +546,11 @@
 					<td>Performance Observer</td>
 					<td>Scrollsnapping</td>
 				</tr>
+				<tr>
+					<td>Web Assembly</td>
+					<td>Beacon</td>
+					<td>Clipboard</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
