--- a/index.html
+++ b/index.html
@@ -551,6 +551,25 @@
 					<td>Beacon</td>
 					<td>Clipboard</td>
 				</tr>
+				<tr>
+					<td>Share</td>
+					<td>Performance API</td>
+					<td>Speech Recognition</td>
+				</tr>
+				<tr>
+					<td>Interaction Media Queries</td>
+					<td>Browser Extensions</td>
+					<td>Pointer Lock API</td>
+				</tr>
+				<tr>
+					<td>Picture in Picture</td>
+					<td>Proxies</td>
+					<td>Houdini</td>
+				</tr>
+				<tr>
+					<td>Project Fugu</td>
+					<td>Web Authentication API</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
