--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>The modern Web</strong></li>
-						<li>Algorithms & Data Structures</li>
+						<li><strong>Algorithms & Data Structures</strong></li>
 						<li>Databases & Servers</li>
 					</ul>
     			</div></div></div><br>
@@ -50,7 +49,7 @@
     				</tr>
     				<tr>
     					<td>Design & UX <span class="completed">Completed</span></td>
-    					<td>The modern Web</td>
+    					<td>The modern Web <span class="completed">Completed</span></td>
     					<td>Algorithms & Data Structures</td>
     				</tr>
     				<tr>
