--- a/index.html
+++ b/index.html
@@ -569,6 +569,15 @@
 					<td>Project Fugu</td>
 					<td>Web Authentication API</td>
 				</tr>
+			</table><br>
+			<h1>Algorithms & Data Structures</h1>
+			<h3>Data structures</h3>
+			<table>
+				<tr>
+					<td>Arrays</td>
+					<td>Queues & Stacks</td>
+					<td>Trees</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
