--- a/index.html
+++ b/index.html
@@ -578,6 +578,11 @@
 					<td>Queues & Stacks</td>
 					<td>Trees</td>
 				</tr>
+				<tr>
+					<td>Binary Indexed Tree</td>
+					<td>Heap</td>
+					<td>Red-black Tree</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
