--- a/index.html
+++ b/index.html
@@ -583,6 +583,15 @@
 					<td>Heap</td>
 					<td>Red-black Tree</td>
 				</tr>
+				<tr>
+					<td>Trie</td>
+					<td>K-D Tree</td>
+					<td>Hash Tables</td>
+				</tr>
+				<tr>
+					<td>Linked Lists</td>
+					<td>Graphs</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
