--- a/index.html
+++ b/index.html
@@ -592,7 +592,19 @@
 					<td>Linked Lists</td>
 					<td>Graphs</td>
 				</tr>
-			</table><br><br>
+			</table>
+			<h3>Analysis</h3>
+			<table>
+				<tr>
+					<td>Time complexity</td>
+					<td>Cost model</td>
+					<td>Order of Growth</td>
+				</tr>
+				<tr>
+					<td>Big O notation</td>
+					<td>Space Complexity</td>
+				</tr>
+			</table><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
 			<footer>
