index.html + bookmarks.html

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Algorithms & Data Structures</strong></li>
-						<li>Databases & Servers</li>
+						<li><strong>Databases & Servers</strong></li>
 					</ul>
     			</div></div></div>
     			<!-- Main content -->
