--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Algorithms & Data Structures</strong></li>
-						<li>Databases & Servers</li>
+						<li><strong>Databases & Servers</strong></li>
 					</ul>
     			</div></div></div><br>
     			<!-- New Table - The Road -->
@@ -50,7 +49,7 @@
     				<tr>
     					<td>Design & UX <span class="completed">Completed</span></td>
     					<td>The modern Web <span class="completed">Completed</span></td>
-    					<td>Algorithms & Data Structures</td>
+    					<td>Algorithms & Data Structures <span class="completed">Completed</span></td>
     				</tr>
     				<tr>
     					<td>Databases & Servers</td>
@@ -604,7 +603,30 @@
 					<td>Big O notation</td>
 					<td>Space Complexity</td>
 				</tr>
-			</table><br>
+			</table>
+			<h3>Algorithms</h3>
+			<table>
+				<tr>
+					<td>Sorting</td>
+					<td>Insertion Sort</td>
+					<td>Quicksort</td>
+				</tr>
+				<tr>
+					<td>Mergesort</td>
+					<td>Heapsort</td>
+					<td>Searching</td>
+				</tr>
+				<tr>
+					<td>Binary Search</td>
+					<td>Breadth First Search</td>
+					<td>Depth First Search</td>
+				</tr>
+				<tr>
+					<td>Dijkstra's Algorithm</td>
+					<td>String Search</td>
+					<td>Harshing</td>
+				</tr>
+			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
 			<footer>
