--- a/index.html
+++ b/index.html
@@ -626,6 +626,45 @@
 					<td>String Search</td>
 					<td>Harshing</td>
 				</tr>
+			</table><br>
+			<h1>Databases & Servers</h1>
+			<h3>Databases</h3>
+			<table>
+				<tr>
+					<td>Relational Databases</td>
+					<td>SQL</td>
+					<td>MySQL</td>
+				</tr>
+				<tr>
+					<td>PostgreSQL</td>
+					<td>Non-relational Databases</td>
+					<td>Redis</td>
+				</tr>
+				<tr>
+					<td>MongoDB</td>
+					<td>Data Modeling</td>
+					<td>ER Diagram</td>
+				</tr>
+				<tr>
+					<td>Keys</td>
+					<td>Indexing</td>
+					<td>Data Integrity</td>
+				</tr>
+				<tr>
+					<td>Normalization</td>
+					<td>Functional Dependencies</td>
+					<td>Normal Forms</td>
+				</tr>
+				<tr>
+					<td>Transactions</td>
+					<td>ACID</td>
+					<td>Serializability</td>
+				</tr>
+				<tr>
+					<td>Locks</td>
+					<td>Deadlocks</td>
+					<td>Precedence graph</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
