--- a/bookmarks.html
+++ b/bookmarks.html
@@ -26,7 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Databases & Servers</strong></li>
+						<li>Empty</li>
 					</ul>
     			</div></div></div>
     			<!-- Main content -->
