--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Databases & Servers</strong></li>
+						<li>Empty</li>
 					</ul>
     			</div></div></div><br>
     			<!-- New Table - The Road -->
@@ -52,7 +52,7 @@
     					<td>Algorithms & Data Structures <span class="completed">Completed</span></td>
     				</tr>
     				<tr>
-    					<td>Databases & Servers</td>
+    					<td>Databases & Servers <span class="completed">Completed</span></td>
     					<td></td>
     					<td></td>
     				</tr>
@@ -664,6 +664,34 @@
 					<td>Locks</td>
 					<td>Deadlocks</td>
 					<td>Precedence graph</td>
+				</tr>
+			</table>
+			<h3>Servers</h3>
+			<table>
+				<tr>
+					<td>Architectural Models</td>
+					<td>Client-Server</td>
+					<td>Proxy Server</td>
+				</tr>
+				<tr>
+					<td>Peer-To-Peer</td>
+					<td>Middleware</td>
+					<td>Request-Reply Protocol</td>
+				</tr>
+				<tr>
+					<td>UDP</td>
+					<td>TCP</td>
+					<td>REST API</td>
+				</tr>
+				<tr>
+					<td>CRUD</td>
+					<td>Express</td>
+					<td>GraphQL</td>
+				</tr>
+				<tr>
+					<td>GNU/LINUX</td>
+					<td>Docker</td>
+					<td>SSH</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
